--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-dtfabric is a project to manage data types and structures, as used in the
-libyal projects.
+Data types fabric (dtFabric) is a YAML-based definition language to specify
+format and data types.
 
 For more information see:
 
-* Project documentation: https://github.com/libyal/dtfabric/wiki/Home
+* Project documentation: https://dtfabric.readthedocs.io/en/latest
 
